--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "license": "MIT",
   "dependencies": {
-    "@aidbox/sdk-r4": "^1.0.11",
+    "axios": "1.7.2",
     "unzipper": "0.12.1"
   }
 }
